--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
 
                                 <div class="carousel-inner rounded-4">
                                     <div class="carousel-item active">
-                                        <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1280/720?random=1" alt="image 1" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
+                                        <img src="./assets/images/placeholder.webp" data-src="./assets/images/1.webp" alt="image 1" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1280/720?random=2" alt="image 2" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
+                                        <img src="./assets/images/placeholder.webp" data-src="./assets/images/2.webp" alt="image 2" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1280/720?random=3" alt="image 3" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
+                                       <img src="./assets/images/placeholder.webp" data-src="./assets/images/3.webp" alt="image 3" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
                                     </div>
                                 </div>
 
