--- a/index.html
+++ b/index.html
@@ -2,43 +2,51 @@
 <html lang="id" data-bs-theme="dark">
 
 <head>
-    <!-- Common Tag -->
+    <!-- Common -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Undangan Pernikahan Acca dan Sani Secara Online</title>
+    <title>Undangan Pernikahan Acca dan Sani</title>
 
-    <!-- SEO Tag -->
+    <!-- SEO -->
     <meta name="author" content="palaccisquad">
     <meta name="language" content="id">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
-    <meta name="title" content="Website Undangan Pernikahan Acca dan Sani Secara Online">
-    <meta name="description" content="Website Undangan Pernikahan Acca dan Sani Secara Online">
-    <meta name="keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:title" content="Website Undangan Pernikahan Acca dan Sani Secara Online">
-    <meta property="og:description" content="Website Undangan Pernikahan Acca dan Sani Secara Online">
-    <meta property="og:keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:image" content="https://ulems.my.id/assets/images/bg.webp">
-    <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.webp">
-    <meta property="og:image:type" content="image/webp">
-    <meta property="og:image:alt" content="Website Undangan Pernikahan Acca dan Sani Secara Online">
-    <meta property="og:image:width" content="980">
-    <meta property="og:image:height" content="980">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="id_ID">
-    <meta property="og:url" content="https://ulems.my.id">
-    <meta property="og:site_name" content="Website Undangan Pernikahan Acca dan Sani Secara Online">
+    <meta name="title" content="Undangan Pernikahan Acca dan Sani">
+    <meta name="description" content="Undangan Online Pernikahan Acca dan Sani">
+    <meta name="keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, undangan pernikahan, template website undangan">
 
-    <!-- Appearance -->
+    <!-- Open Graph (Facebook, WhatsApp, dll) -->
+    <meta property="og:title" content="Undangan Pernikahan Acca dan Sani">
+    <meta property="og:description" content="Undangan Online Pernikahan Acca dan Sani">
+    <meta property="og:image" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
+    <meta property="og:image:secure_url" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="Galeri Pernikahan Acca dan Sani">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://plcundangan.vercel.app">
+    <meta property="og:site_name" content="Undangan Online Pernikahan Acca dan Sani">
+    <meta property="og:locale" content="id_ID">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Undangan Pernikahan Acca dan Sani">
+    <meta name="twitter:description" content="Undangan Online Pernikahan Acca dan Sani">
+    <meta name="twitter:image" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
+
+    <!-- Appearance & Favicon -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Acca dan Sani Secara Online">
+    <meta name="apple-mobile-web-app-title" content="Undangan Online Pernikahan Acca dan Sani">
     <meta name="theme-color" content="#000000">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="canonical" href="https://ulems.my.id/">
-    <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" href="https://ulems.my.id/assets/images/icon-192x192.png">
-    <link rel="icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico">
+    <link rel="canonical" href="https://plcundangan.vercel.app/">
+    <link rel="shortcut icon" type="image/x-icon" href="https://plcundangan.vercel.app/assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="192x192" href="https://plcundangan.vercel.app/assets/images/icon-192x192.png">
+    <link rel="icon" type="image/x-icon" href="https://plcundangan.vercel.app/assets/favicon.ico">
+
 
     <!-- Preconnect CDN -->
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
@@ -96,13 +104,13 @@
                 <div class="d-flex position-absolute w-100 h-100">
                     <div class="position-relative overflow-hidden vw-100">
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1000/1000?random=7" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="./assets/images/placeholder.webp" data-src="./assets/images/1.webp" alt="bg 1" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1000/1000?random=8" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="./assets/images/placeholder.webp" data-src="./assets/images/2.webp" alt="bg 2" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1000/1000?random=9" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="./assets/images/placeholder.webp" data-src="./assets/images/3.webp" alt="bg 3" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                     </div>
                 </div>
@@ -383,7 +391,7 @@
                                         <img src="./assets/images/placeholder.webp" data-src="./assets/images/2.webp" alt="image 2" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
-                                       <img src="./assets/images/placeholder.webp" data-src="./assets/images/3.webp" alt="image 3" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
+                                        <img src="./assets/images/placeholder.webp" data-src="./assets/images/3.webp" alt="image 3" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
                                     </div>
                                 </div>
 
@@ -398,38 +406,10 @@
                                 </button>
                             </div>
 
-                            <div id="carousel-image-two" data-aos="fade-up" data-aos-duration="1500" class="carousel slide mt-4" data-bs-ride="carousel">
-                                <div class="carousel-indicators">
-                                    <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                    <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                    <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                </div>
-
-                                <div class="carousel-inner rounded-4">
-                                    <div class="carousel-item active">
-                                        <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1280/720?random=4" alt="image 4" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1280/720?random=5" alt="image 5" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/images/placeholder.webp" data-src="https://picsum.photos/1280/720?random=6" alt="image 6" class="d-block img-fluid" onclick="undangan.guest.modal(this)">
-                                    </div>
-                                </div>
-
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-image-two" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-
-                                <button class="carousel-control-next" type="button" data-bs-target="#carousel-image-two" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
-                            </div>
                         </div>
                     </div>
                 </section>
+
 
                 <!-- Wave Separator -->
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="color-theme-svg no-gap-bottom">
@@ -506,7 +486,9 @@
                 </section>
 
                 <!-- Comment -->
-                <section class="bg-light-dark my-0 pb-0 pt-3" id="comment">
+                <!-- <section class="bg-light-dark my-0 pb-0 pt-3" id="comment"> -->
+                    <!-- Komentar dinonaktifkan -->
+                <section class="bg-light-dark my-0 pb-0 pt-3" id="comment-disabled" style="display: none;">
                     <div class="container">
                         <div class="border rounded-5 shadow p-3 mb-2">
                             <h2 class="font-esthetic text-center mt-2 mb-4" style="font-size: 2.25rem;">Ucapan &amp; Doa</h2>
@@ -616,7 +598,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#comment">
+                        <!-- <a class="nav-link" href="#comment"> -->
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                             <i class="fa-solid fa-comments"></i>
                             <span class="d-block" style="font-size: 0.7rem;">Ucapan</span>
                         </a>
