update gambar to cover-share

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="canonical" href="https://plcundangan.vercel.app/">
     <link rel="shortcut icon" type="image/x-icon" href="https://plcundangan.vercel.app/assets/favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" href="https://plcundangan.vercel.app/assets/images/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
     <link rel="icon" type="image/x-icon" href="https://plcundangan.vercel.app/assets/favicon.ico">
 
 
