--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <meta property="og:title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
     <meta property="og:description" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
     <meta property="og:keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:image" content="https://plcundangan.vercel.app/assets/images/bg.webp">
-    <meta property="og:image:secure_url" content="https://plcundangan.vercel.app/assets/images/bg.webp">
-    <meta property="og:image:type" content="image/webp">
-    <meta property="og:image:alt" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta property="og:image:width" content="980">
-    <meta property="og:image:height" content="980">
+    <meta property="og:image" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
+    <meta property="og:image:secure_url" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta property="og:url" content="https://plcundangan.vercel.app">
