--- a/index.html
+++ b/index.html
@@ -2,42 +2,52 @@
 <html lang="id" data-bs-theme="dark">
 
 <head>
-    <!-- Common Tag -->
+    <!-- Common -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Undangan Pernikahan Wahyu dan Riski Secara Online</title>
+    <title>Undangan Pernikahan Acca dan Sani</title>
 
-    <!-- SEO Tag -->
-    <meta name="author" content="dewanakl">
+    <!-- SEO -->
+    <meta name="author" content="palaccisquad">
     <meta name="language" content="id">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
-    <meta name="title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta name="description" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta name="keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta property="og:description" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
-    <meta property="og:keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
+    <meta name="title" content="Undangan Pernikahan Acca dan Sani">
+    <meta name="description" content="Undangan Online Pernikahan Acca dan Sani">
+    <meta name="keywords" content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, undangan pernikahan, template website undangan">
+
+    <!-- Open Graph (Facebook, WhatsApp, dll) -->
+    <meta property="og:title" content="Undangan Pernikahan Acca dan Sani">
+    <meta property="og:description" content="Undangan Online Pernikahan Acca dan Sani">
     <meta property="og:image" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
     <meta property="og:image:secure_url" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
     <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="Galeri Pernikahan Acca dan Sani">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
-    <meta property="og:locale" content="id_ID">
     <meta property="og:url" content="https://plcundangan.vercel.app">
-    <meta property="og:site_name" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta property="og:site_name" content="Undangan Online Pernikahan Acca dan Sani">
+    <meta property="og:locale" content="id_ID">
 
-    <!-- Appearance -->
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Undangan Pernikahan Acca dan Sani">
+    <meta name="twitter:description" content="Undangan Online Pernikahan Acca dan Sani">
+    <meta name="twitter:image" content="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
+
+    <!-- Appearance & Favicon -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Wahyu dan Riski Secara Online">
+    <meta name="apple-mobile-web-app-title" content="Undangan Online Pernikahan Acca dan Sani">
     <meta name="theme-color" content="#000000">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="canonical" href="https://ulems.my.id/">
-    <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" href="https://ulems.my.id/assets/images/icon-192x192.png">
-    <link rel="icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico">
+    <link rel="canonical" href="https://plcundangan.vercel.app/">
+    <link rel="shortcut icon" type="image/x-icon" href="https://plcundangan.vercel.app/assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="192x192" href="https://plcundangan.vercel.app/assets/images/cover-share.jpeg">
+    <link rel="icon" type="image/x-icon" href="https://plcundangan.vercel.app/assets/favicon.ico">
+
+
 
     <!-- Preconnect CDN -->
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
